Changed to java version 1.8